css/zodiac.css
/***
 *    ██████╗ ███████╗███████╗███████╗████████╗
 *    ██╔══██╗██╔════╝██╔════╝██╔════╝╚══██╔══╝
 *    ██████╔╝█████╗  ███████╗█████╗     ██║   
 *    ██╔══██╗██╔══╝  ╚════██║██╔══╝     ██║   
 *    ██║  ██║███████╗███████║███████╗   ██║   
 *    ╚═╝  ╚═╝╚══════╝╚══════╝╚══════╝   ╚═╝   
 *                                             
 */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
margin: 0;
padding: 0;
border: 0;
font-size: 100%;
font: inherit;
vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
display: block;
}
body {
line-height: 1;
}
ol, ul {
list-style: none;
}
blockquote, q {
quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
content: '';
content: none;
}
table {
border-collapse: collapse;
border-spacing: 0;
}




/***
 *    ███████╗ ██████╗ ███╗   ██╗████████╗███████╗
 *    ██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝██╔════╝
 *    █████╗  ██║   ██║██╔██╗ ██║   ██║   ███████╗
 *    ██╔══╝  ██║   ██║██║╚██╗██║   ██║   ╚════██║
 *    ██║     ╚██████╔╝██║ ╚████║   ██║   ███████║
 *    ╚═╝      ╚═════╝ ╚═╝  ╚═══╝   ╚═╝   ╚══════╝
 *                                                
 */

@font-face {
    font-family: 'MontserratRegular';
    src: url('../fonts/montserrat-regular-webfont.woff2') format('woff2'),
         url('../fonts/montserrat-regular-webfont.woff') format('woff');
    font-weight: normal;
}

@font-face {
    font-family: 'Potra';
    src: url('../fonts/potra1-webfont.woff') format('woff'),
         url('../fonts/potra1-webfont.woff2') format('woff2');
    font-weight: normal;
}

@font-face {
    font-family: 'OpenSans';
    src: url('../fonts/opensans-regular-webfont.woff') format('woff'),
         url('../fonts/opensans-regular-webfont.woff2') format('woff2');
    font-weight: normal;
}

@font-face {
    font-family: 'OpenSans';
    src: url('../fonts/opensans-semibold-webfont.woff') format('woff'),
         url('../fonts/opensans-semibold-webfont.woff2') format('woff2');
    font-weight: 600;
}


/***
 *    ████████╗ █████╗  ██████╗ ███████╗
 *    ╚══██╔══╝██╔══██╗██╔════╝ ██╔════╝
 *       ██║   ███████║██║  ███╗███████╗
 *       ██║   ██╔══██║██║   ██║╚════██║
 *       ██║   ██║  ██║╚██████╔╝███████║
 *       ╚═╝   ╚═╝  ╚═╝ ╚═════╝ ╚══════╝
 *                                      
 */

:root {
    --colorExpand: colorExpand .2s ease-in-out forwards;
    --colorRemove: colorRemove .2s ease-in-out forwards;
}

 *, *::before, *::after {
    box-sizing: border-box;
}

[hidden] {
    display: none;
}

html {
    /* background-attachment: fixed;
    background-image: linear-gradient(to top, #05152e, #041837, #031c3f, #031f48, #032251);
    background-repeat: no-repeat; */
    font-size: 100%;
    height: 100%;
    background: #F3F3F3;
}

body {
    position: relative;
    display: grid;
    width: 100%;
    height: 100%;
    /* grid-template-rows: repeat(20, 5rem); */
    grid-template: 10rem 3rem auto / repeat(8, 12.5%);
    grid-template-areas: 
        ". header header header header header header ."
        ". . . . . . . ."
        ". main main main main main main .";
    overflow-x: hidden;
    font: normal normal 1rem/1.5rem 'OpenSans', Helvetica, Arial, sans-serif;
}

h1, h2 {
    text-align: center;
    /* color: #000; */
}

h1 {
    font: 5rem/5rem 'Potra', Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    margin: 1.5rem 0 1.5rem;
}

h2 {
    font: normal normal 600 1.5rem/2.25rem 'OpenSans', Helvetica, Arial, sans-serif;
}

header {
    grid-area: header;
}

main {
    grid-area: main;
}

/* Diagonal background box */
div.bkgrContain {
    height: 100%;
    /* background-color: aqua; */
    grid-area: 1 / 1 / -1 / -1;
    z-index: -10;
    /* overflow: hidden; */
}

#skew {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    /* width: 100%; */
    height: 40rem;
    /* background-color: #aeaeae; */
    transform: skewY(-15deg);
    transform-origin: top left;
    transition: all .5s ease-in-out;
    overflow: hidden;
}

.skewDefault {
    background-color: #aeaeae;
    transition: all .5s ease-in-out;
}

.skewfire {
    background-color: red;
}

@keyframes colorExpand {
    from {
        height: 0%;
    }
    to {
        height: 100%;
    }
}

@keyframes colorRemove {
    from {
        height: 100%;
    }
    to {
        height: 0%;
    }
}

#colorFill {
    width: 200%;
    /* height: 6rem; */
    /* border-radius: 50%; */
    transform: skewY(15deg) rotate(-15deg);
    position: absolute;
    bottom: 0%;
    left: -50%;
}

#colorFill.expand {
    animation: var(--colorExpand);
}

#colorFill.remove {
    animation: var(--colorRemove);
}

#colorFill.fire {
    background-color: red;
    /* animation: var(--colorExpand); */
}

#colorFill.water {
    background-color: blue;
    /* animation: var(--colorExpand); */
}

#colorFill.air {
    background-color: silver;
    /* animation: var(--colorExpand); */
}

#colorFill.earth {
    background-color: green;
    /* animation: var(--colorExpand); */
}

#colorFill.metal {
    background-color: rgb(105, 105, 105);
    /* animation: var(--colorExpand); */
}

#colorFill.lightning {
    background-color: yellow;
    /* animation: var(--colorExpand); */
}

#colorFill.plasma {
    background-color: purple;
    /* animation: var(--colorExpand); */
}

#colorFill.void {
    background-color: darkolivegreen;
    /* animation: var(--colorExpand); */
}
/* ... */

